service worker: Move PageTransition/RedirectChain metrics out of SWControlleeRequestHandler.

These metrics don't work well at the ServiceWorkerControlleeRequestHandler
layer for S13nServiceWorker, for the reasons in the bug. Actually they are
pretty suspect for non-S13nServiceWorker too because we are recording them on
every URL request, not just committed page load, so we are double-counting on
redirects.

This patch:
1) Moves the PageTransition metric to ServiceWorkerPageLoadMetricsObserver.
This is a better fit also because page transition info is expected to be
removed from ResourceRequest as per the TODO there.
2) Removes the RedirectChain metric. We haven't been using it. If needed
we can always add one to ServiceWorkerPageLoadMetricsObserver alongside
PageTransition.

R=bmcquade, kinuko

Bug: 805805
Change-Id: I58029612f8c7697ec280bcc80bec97f6f64d9dd9