content/browser/service_worker/service_worker_metrics.cc
@@ -453,12 +453,9 @@ void ServiceWorkerMetrics::RecordDeleteAndStartOverResult(
                             result, NUM_DELETE_AND_START_OVER_RESULT_TYPES);
 }
 
-void ServiceWorkerMetrics::CountControlledPageLoad(
-    Site site,
-    const GURL& url,
-    bool is_main_frame_load,
-    ui::PageTransition page_transition,
-    size_t redirect_chain_length) {
+void ServiceWorkerMetrics::CountControlledPageLoad(Site site,
+                                                   const GURL& url,
+                                                   bool is_main_frame_load) {
   DCHECK_NE(site, Site::OTHER);
   UMA_HISTOGRAM_ENUMERATION("ServiceWorker.PageLoad", static_cast<int>(site),
                             static_cast<int>(Site::NUM_TYPES));
@@ -470,19 +467,6 @@ void ServiceWorkerMetrics::CountControlledPageLoad(
   if (ShouldExcludeSiteFromHistogram(site))
     return;
 
-  if (is_main_frame_load) {
-    UMA_HISTOGRAM_ENUMERATION(
-        "ServiceWorker.MainFramePageLoad.CoreTransition",
-        static_cast<int>(ui::PageTransitionStripQualifier(page_transition)),
-        static_cast<int>(ui::PAGE_TRANSITION_LAST_CORE) + 1);
-    // Currently the max number of HTTP redirects is 20 as defined in
-    // net::URLRequest::kMaxRedirects in
-    // net/url_request/url_request.h. So the max number of the chain
-    // length is 21.
-    UMA_HISTOGRAM_EXACT_LINEAR(
-        "ServiceWorker.MainFramePageLoad.RedirectChainLength",
-        redirect_chain_length, net::URLRequest::kMaxRedirects + 1);
-  }
   BrowserThread::PostTask(
       BrowserThread::UI, FROM_HERE,
       base::BindOnce(&RecordURLMetricOnUI, "ServiceWorker.ControlledPageUrl",
