content/browser/service_worker/service_worker_url_loader_job.cc
@@ -119,16 +119,6 @@ bool ServiceWorkerURLLoaderJob::ShouldFallbackToNetwork() {
   return response_type_ == ResponseType::FALLBACK_TO_NETWORK;
 }
 
-ui::PageTransition ServiceWorkerURLLoaderJob::GetPageTransition() {
-  NOTIMPLEMENTED();
-  return ui::PAGE_TRANSITION_LINK;
-}
-
-size_t ServiceWorkerURLLoaderJob::GetURLChainSize() const {
-  NOTIMPLEMENTED();
-  return 0;
-}
-
 void ServiceWorkerURLLoaderJob::FailDueToLostController() {
   NOTIMPLEMENTED();
 }
