content/browser/service_worker/service_worker_url_loader_job.h
@@ -79,8 +79,6 @@ class CONTENT_EXPORT ServiceWorkerURLLoaderJob
   void ForwardToServiceWorker();
   bool ShouldFallbackToNetwork();
   void FailDueToLostController();
-  ui::PageTransition GetPageTransition();
-  size_t GetURLChainSize() const;
   void Cancel();
   bool WasCanceled() const;
 
